--- a/app/src/main/res/layout-land/content_course_edit.xml
+++ b/app/src/main/res/layout-land/content_course_edit.xml
@@ -56,8 +56,8 @@
         android:id="@+id/course_switch_alert_start"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/activity_margin_small"
         android:layout_marginStart="@dimen/activity_margin_large"
+        android:layout_marginEnd="@dimen/activity_margin_small"
         android:switchPadding="@dimen/activity_margin_small"
         android:text="@string/enable_start_alert"
         android:textSize="@dimen/text_size_editor"
@@ -90,8 +90,8 @@
         android:id="@+id/course_switch_alert_end"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/activity_margin_small"
         android:layout_marginStart="@dimen/activity_margin_large"
+        android:layout_marginEnd="@dimen/activity_margin_small"
         android:switchPadding="@dimen/activity_margin_small"
         android:text="@string/enable_end_alert"
         android:textSize="@dimen/text_size_editor"
@@ -100,142 +100,154 @@
         app:layout_constraintTop_toTopOf="@+id/course_input_end_layout" />
 
 
-    <TextView
-        android:id="@+id/course_status_label"
+    <LinearLayout
+        android:id="@+id/course_status_term_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_large"
         android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/course_status"
-        android:textSize="@dimen/text_size_editor"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/course_input_end_layout" />
+        app:layout_constraintTop_toBottomOf="@id/course_input_end_layout">
 
-    <Spinner
-        android:id="@+id/course_input_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_large"
-        android:entries="@array/sample_list_items"
-        app:layout_constraintBottom_toBottomOf="@id/course_status_label"
-        app:layout_constraintStart_toEndOf="@id/course_status_label"
-        app:layout_constraintTop_toTopOf="@id/course_status_label" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/course_term_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_large"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/term"
-        android:textSize="@dimen/text_size_editor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/course_status_label" />
+            <TextView
+                android:id="@+id/course_status_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/course_status"
+                android:textSize="@dimen/text_size_editor" />
 
-    <Spinner
-        android:id="@+id/course_input_term"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_large"
-        android:entries="@array/sample_list_items"
-        app:layout_constraintBottom_toBottomOf="@id/course_term_label"
-        app:layout_constraintStart_toEndOf="@id/course_term_label"
-        app:layout_constraintTop_toTopOf="@id/course_term_label" />
+            <Spinner
+                android:id="@+id/course_input_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_margin_large"
+                android:entries="@array/sample_list_items" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/course_term_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/term"
+                android:textSize="@dimen/text_size_editor" />
+
+            <Spinner
+                android:id="@+id/course_input_term"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_margin_large"
+                android:entries="@array/sample_list_items" />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/mentor_text_description_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_small"
         android:layout_marginTop="@dimen/text_line_spacing"
+        android:layout_marginEnd="@dimen/activity_margin_small"
         android:text="@string/course_mentor"
         android:textSize="@dimen/text_size_editor"
-        app:layout_constraintTop_toBottomOf="@id/course_term_label" />
+        app:layout_constraintTop_toBottomOf="@id/course_status_term_layout" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_first_name_layout"
+
+    <LinearLayout
+        android:id="@+id/course_mentor_name_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
         android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mentor_text_description_1">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_first_name"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_first_name_layout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/first_name"
-            android:inputType="textCapWords" />
+            android:layout_weight="1"
+            app:errorEnabled="false">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/first_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_last_name_layout"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_last_name_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/last_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/course_mentor_contact_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
         android:layout_marginTop="@dimen/text_line_spacing"
         android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_first_name_layout">
+        app:layout_constraintTop_toBottomOf="@id/course_mentor_name_layout">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_last_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_phone_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/last_name"
-            android:inputType="textCapWords" />
+            android:layout_weight="1"
+            app:errorEnabled="false">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone_number"
+                android:inputType="phone" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_phone_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_last_name_layout">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_phone"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/phone_number"
-            android:inputType="phone" />
+            android:layout_weight="1"
+            app:errorEnabled="false">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email_address"
+                android:inputType="textEmailAddress" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_email_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_phone_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/email_address"
-            android:inputType="textEmailAddress" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
