--- a/app/src/main/res/layout-land/recyclerview_item_course.xml
+++ b/app/src/main/res/layout-land/recyclerview_item_course.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/courses_cardView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/course_card_height"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
         android:layout_marginTop="@dimen/activity_margin_small"
         android:layout_marginEnd="@dimen/activity_margin_small"
@@ -20,7 +20,8 @@
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_margin_small">
+            android:paddingTop="@dimen/activity_margin_small"
+            android:paddingBottom="@dimen/activity_margin_small">
 
             <TextView
                 android:id="@+id/course_list_text_name"
