--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,16 +18,16 @@
             android:title="@string/title_activity_course_list" />
     </group>
 
-    <item android:title="Data Management">
+    <item android:title="Test Data Management">
         <menu>
             <item
                 android:id="@+id/nav_clear_db"
                 android:icon="@drawable/ic_warning"
-                android:title="Clear Database" />
+                android:title="Clear DB Data" />
             <item
                 android:id="@+id/nav_seed_db"
                 android:icon="@drawable/ic_warning"
-                android:title="Seed Database" />
+                android:title="Clear and Seed DB" />
         </menu>
     </item>
 
