--- a/app/src/main/res/layout-land/dialog_note.xml
+++ b/app/src/main/res/layout-land/dialog_note.xml
@@ -14,6 +14,7 @@
         android:lines="10"
         android:padding="@dimen/activity_margin_small"
         android:scrollbars="vertical"
+        android:importantForAutofill="no"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula eros eget consequat venenatis. Nam aliquet metus id est feugiat elementum. Vestibulum non est vestibulum." />
 
     <LinearLayout
