--- a/app/src/main/res/menu/menu_assessment_edit.xml
+++ b/app/src/main/res/menu/menu_assessment_edit.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_save_assessment_edit"
         android:orderInCategory="100"
         android:title="@string/save"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_delete_assessment_edit"
