--- a/app/src/main/res/menu/menu_course.xml
+++ b/app/src/main/res/menu/menu_course.xml
@@ -7,17 +7,17 @@
         android:icon="@drawable/ic_note"
         android:orderInCategory="100"
         android:title="@string/notes"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_edit_course"
         android:icon="@drawable/ic_edit"
         android:orderInCategory="110"
         android:title="@string/edit"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_delete_course"
         android:icon="@drawable/ic_delete"
         android:orderInCategory="120"
         android:title="@string/delete"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
