--- a/app/src/main/res/layout/content_course_edit.xml
+++ b/app/src/main/res/layout/content_course_edit.xml
@@ -56,8 +56,8 @@
         android:id="@+id/course_switch_alert_start"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/activity_margin_small"
         android:layout_marginStart="@dimen/activity_margin_large"
+        android:layout_marginEnd="@dimen/activity_margin_small"
         android:switchPadding="@dimen/activity_margin_small"
         android:text="@string/enable_start_alert"
         android:textSize="@dimen/text_size_editor"
@@ -90,8 +90,8 @@
         android:id="@+id/course_switch_alert_end"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/activity_margin_small"
         android:layout_marginStart="@dimen/activity_margin_large"
+        android:layout_marginEnd="@dimen/activity_margin_small"
         android:switchPadding="@dimen/activity_margin_small"
         android:text="@string/enable_end_alert"
         android:textSize="@dimen/text_size_editor"
@@ -105,8 +105,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_large"
         android:layout_marginTop="@dimen/text_line_spacing"
+        android:layout_marginEnd="@dimen/activity_margin_large"
         android:text="@string/course_status"
         android:textSize="@dimen/text_size_editor"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,8 +127,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_large"
         android:layout_marginTop="@dimen/text_line_spacing"
+        android:layout_marginEnd="@dimen/activity_margin_large"
         android:text="@string/term"
         android:textSize="@dimen/text_size_editor"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,98 +144,261 @@
         app:layout_constraintStart_toEndOf="@id/course_term_label"
         app:layout_constraintTop_toTopOf="@id/course_term_label" />
 
-    <TextView
-        android:id="@+id/mentor_text_description_1"
+    <LinearLayout
+        android:id="@+id/course_edit_mentor_1_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/course_mentor"
-        android:textSize="@dimen/text_size_editor"
-        app:layout_constraintTop_toBottomOf="@id/course_term_label" />
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/course_term_label">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_first_name_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_text_description_1">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_first_name"
+        <TextView
+            android:id="@+id/mentor_text_description_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/first_name"
-            android:inputType="textCapWords" />
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:text="@string/course_mentor"
+            android:textSize="@dimen/text_size_editor" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_last_name_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_first_name_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_last_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_first_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/last_name"
-            android:inputType="textCapWords" />
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/first_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_phone_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_last_name_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_phone"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_last_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/phone_number"
-            android:inputType="phone" />
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/last_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mentor_input_email_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        app:errorEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_phone_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mentor_input_email"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_phone_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email_address"
-            android:inputType="textEmailAddress" />
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone_number"
+                android:inputType="phone" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_input_email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email_address"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/course_edit_mentor_2_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/course_edit_mentor_1_layout">
+
+        <TextView
+            android:id="@+id/mentor_text_description_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:text="@string/course_mentor_2"
+            android:textSize="@dimen/text_size_editor" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_2_input_first_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_2_input_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/first_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_2_input_last_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_2_input_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/last_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_2_input_phone_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_2_input_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone_number"
+                android:inputType="phone" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_2_input_email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_2_input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email_address"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/course_edit_mentor_3_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/course_edit_mentor_2_layout">
+
+        <TextView
+            android:id="@+id/mentor_text_description_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:text="@string/course_mentor_3"
+            android:textSize="@dimen/text_size_editor" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_3_input_first_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_3_input_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/first_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_3_input_last_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_3_input_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/last_name"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_3_input_phone_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_3_input_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone_number"
+                android:inputType="phone" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mentor_3_input_email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mentor_3_input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email_address"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
