feat: Add additional mentors to course details screen
Resolves: #47

--- a/app/src/main/res/layout-land/content_course.xml
+++ b/app/src/main/res/layout-land/content_course.xml
@@ -90,53 +90,111 @@
                 android:textSize="@dimen/text_size_standard"
                 tools:text="Mentor Name" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/course_text_mentor_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:drawableStart="@drawable/ic_phone"
+                android:drawablePadding="@dimen/activity_margin_small"
+                android:gravity="center_vertical"
+                android:onClick="handleMentorPhoneClick"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Phone" />
+
+            <TextView
+                android:id="@+id/course_text_mentor_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/indent_size">
+                android:layout_marginStart="@dimen/indent_size"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="@dimen/activity_margin_small"
+                android:gravity="center_vertical"
+                android:onClick="handleMentorEmailClick"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Email" />
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/course_mentor_email_icon"
-                    android:layout_width="@dimen/mentor_icon_size"
-                    android:layout_height="@dimen/mentor_icon_size"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="@dimen/text_line_spacing"
-                    android:onClick="handleMentorEmailClick"
-                    android:src="@drawable/ic_email" />
+        <LinearLayout
+            android:id="@+id/mentor_2_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/course_text_mentor_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:onClick="handleMentorEmailClick"
-                    android:textSize="@dimen/text_size_standard"
-                    tools:text="Mentor Email" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/course_text_mentor_2_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Name" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/course_text_mentor_2_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:drawableStart="@drawable/ic_phone"
+                android:drawablePadding="@dimen/activity_margin_small"
+                android:gravity="center_vertical"
+                android:onClick="handleMentorPhoneClick"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Phone" />
+
+            <TextView
+                android:id="@+id/course_text_mentor_2_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/indent_size">
+                android:layout_marginStart="@dimen/indent_size"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="@dimen/activity_margin_small"
+                android:gravity="center_vertical"
+                android:onClick="handleMentorEmailClick"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Email" />
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/course_mentor_phone_icon"
-                    android:layout_width="@dimen/mentor_icon_size"
-                    android:layout_height="@dimen/mentor_icon_size"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="@dimen/text_line_spacing"
-                    android:onClick="handleMentorPhoneClick"
-                    android:src="@drawable/ic_phone" />
+        <LinearLayout
+            android:id="@+id/mentor_3_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/course_text_mentor_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:onClick="handleMentorPhoneClick"
-                    android:textSize="@dimen/text_size_standard"
-                    tools:text="Mentor Phone" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/course_text_mentor_3_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Name" />
+
+            <TextView
+                android:id="@+id/course_text_mentor_3_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:drawableStart="@drawable/ic_phone"
+                android:drawablePadding="@dimen/activity_margin_small"
+                android:gravity="center_vertical"
+                android:onClick="handleMentorPhoneClick"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Phone" />
+
+            <TextView
+                android:id="@+id/course_text_mentor_3_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="@dimen/activity_margin_small"
+                android:gravity="center_vertical"
+                android:onClick="handleMentorEmailClick"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Mentor Email" />
         </LinearLayout>
 
         <View
